# FastAPI_contactbook

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 629cf57f7955_added_user_table.py  df71da638e9b_added_confirmed_field_in_user_table.py  f56ef6dd8414_init.py
postgres-data/global/: 1260  1262  2671  pg_control
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/conf/: config.py
src/conf/postgres-data/: postmaster.pid
src/conf/postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
src/conf/postgres-data/base/16384/: 1247  1249  1259  16394  16397  16399  16400  16404  16406  16407  16408  16414  16416  16418  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
src/conf/postgres-data/base/5/: pg_internal.init
src/conf/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/conf/postgres-data/pg_stat/: pgstat.stat
src/conf/postgres-data/pg_xact/: 0000
src/database/: db.py  models.py
src/repository/: additional.py  contacts.py  users.py
src/routes/: additional.py  auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_additional.py  test_unit_repository_contacts.py  test_unit_repository_users.py
