[tool.poetry]
name = "homework11"
version = "0.1.0"
description = ""
authors = ["OktawianCzakiert <oktawian.czakiert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
libgravatar = "^1.0.4"
python-multipart = "^0.0.7"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
