[tool.poetry]
name = "homework11"
version = "0.1.0"
description = ""
authors = ["OktawianCzakiert <oktawian.czakiert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.6.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
libgravatar = "^1.0.4"
python-multipart = "^0.0.7"
bcrypt = "^4.1.2"
fastapi-mail = "^1.4.1"
jose = "^1.0.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.38.0"
icecream = "^2.1.3"
pytest = "^8.0.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

